macOS: Fix shift key not being recognized in keyboard shortcuts.

A recent refactor changed keyboard shortcut processing to use [NSMenuItem
cr_firesForKeyEvent:] as the detection logic. That method has had a bug since
its inception where it fails to recognize NSMenuItems that use the shift key.
This CL fixes the bug and adds tests.

Bug: 851259
Change-Id: I1ab0698d3ea259256e3f0bb459537d0a91b3beb7
Reviewed-on: https://chromium-review.googlesource.com/1095839
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566147}
Former-commit-id: 5a8bff8ee3902ed0d134cd2e80c4812c37d42451